edit author & add figures

--- a/rocat.tex
+++ b/rocat.tex
@@ -20,21 +20,30 @@
 
 \author{
 \IEEEauthorblockN{
-Yusuke Saito\IEEEauthorrefmark{1},
-Shin Fujiwara\IEEEauthorrefmark{1},
-Kenji Fujiwara\IEEEauthorrefmark{1},
-Stevche Radevski\IEEEauthorrefmark{1},\\
 Hideaki Hata\IEEEauthorrefmark{1},
-Hajimu Iida\IEEEauthorrefmark{1},
-Kenichi Matsumoto\IEEEauthorrefmark{1}
+Kyohei Uemura\IEEEauthorrefmark{1},
+Daiki Tanaka\IEEEauthorrefmark{1},
+Tomohiro Ichinose\IEEEauthorrefmark{1}
 }
+
+%\IEEEauthorblockN{
+%Yusuke Saito\IEEEauthorrefmark{1},
+%Shin Fujiwara\IEEEauthorrefmark{1},
+%Kenji Fujiwara\IEEEauthorrefmark{1},
+%Stevche Radevski\IEEEauthorrefmark{1},\\
+%Hideaki Hata\IEEEauthorrefmark{1},
+%Hajimu Iida\IEEEauthorrefmark{1},
+%Kenichi Matsumoto\IEEEauthorrefmark{1}
+%}
 \IEEEauthorblockA{\IEEEauthorrefmark{1}Graduate School of Information Science,
 Nara Institute of Science and Technology\\
 Takayama-cho 8916-5, Ikoma-shi, Nara,
 630-0192 Japan\\
-Email: \{saito.yusuke.sl9, fujiwara.shin.fe5, kenji-f, stevche.radevski.sl1, hata\}@is.naist.jp,\\
-iida@itc.naist.jp, matumoto@is.naist.jp}
+Email: \{hata, uemura.kyohei.ub9, tanaka.daiki.sx4, ichinose.tomohiro.ik1\}@is.naist.jp}
 }
+%Email: \{saito.yusuke.sl9, fujiwara.shin.fe5, kenji-f, stevche.radevski.sl1, hata\}@is.naist.jp,\\
+%iida@itc.naist.jp, matumoto@is.naist.jp}
+%}
 
 \maketitle
 
@@ -185,6 +194,26 @@ To start with, we also present ROCAT on Kataribe for providing software analytic
 This work has been supported by JSPS KAKENHI Grant Number 26540029, and Program for Advancing Strategic International Networks to Accelerate the Circulation of Talented Researchers: Interdisciplinary Global Networks for Accelerating Theory and Practice in Software Ecosystem.
 We would like to thank Takao Nakagawa for the suggestions about the demo movie.
 
+\begin{figure*}[t!]
+\centering
+\includegraphics[bb=0 0 1106 666, width=18cm]{NewROCAT.eps}
+\caption{Snapshot of ROCAT}
+\label{figure:new-rocat}
+\end{figure*}
+
+\begin{figure*}[t!]
+\centering
+\includegraphics[bb=0 0 1152 970, width=18cm]{NewROCATonKataribe1.eps}
+\caption{Snapshot of ROCAT on Kataribe}
+\label{figure:new-rocat-on-kataribe1}
+\end{figure*}
+
+\begin{figure*}[t!]
+\centering
+\includegraphics[bb=0 0 1175 793, width=18cm]{NewROCATonKataribe2.eps}
+\caption{Snapshot of ROCAT on Kataribe}
+\label{figure:new-rocat-on-kataribe2}
+\end{figure*}
 
 \bibliographystyle{IEEEtran}
 \bibliography{ref,reference-hata}
