--- a/rocat.tex
+++ b/rocat.tex
@@ -20,10 +20,10 @@
 
 \author{
 \IEEEauthorblockN{
-Hideaki Hata\IEEEauthorrefmark{1},
+Tomohiro Ichinose\IEEEauthorrefmark{1},
 Kyohei Uemura\IEEEauthorrefmark{1},
 Daiki Tanaka\IEEEauthorrefmark{1},
-Tomohiro Ichinose\IEEEauthorrefmark{1}
+Hideaki Hata\IEEEauthorrefmark{1}
 }
 
 %\IEEEauthorblockN{
@@ -39,7 +39,7 @@ Tomohiro Ichinose\IEEEauthorrefmark{1}
 Nara Institute of Science and Technology\\
 Takayama-cho 8916-5, Ikoma-shi, Nara,
 630-0192 Japan\\
-Email: \{hata, uemura.kyohei.ub9, tanaka.daiki.sx4, ichinose.tomohiro.ik1\}@is.naist.jp}
+Email: \{ichinose.tomohiro.ik1, uemura.kyohei.ub9, tanaka.daiki.sx4, hata\}@is.naist.jp}
 }
 %Email: \{saito.yusuke.sl9, fujiwara.shin.fe5, kenji-f, stevche.radevski.sl1, hata\}@is.naist.jp,\\
 %iida@itc.naist.jp, matumoto@is.naist.jp}
