--- a/rocat.tex
+++ b/rocat.tex
@@ -24,7 +24,9 @@
 Tomohiro Ichinose\IEEEauthorrefmark{1},
 Kyohei Uemura\IEEEauthorrefmark{1},
 Daiki Tanaka\IEEEauthorrefmark{1},
-Hideaki Hata\IEEEauthorrefmark{1}
+Hideaki Hata\IEEEauthorrefmark{1},
+Hajimu Iida\IEEEauthorrefmark{1},
+Kenichi Matsumoto\IEEEauthorrefmark{1}
 }
 
 %\IEEEauthorblockN{
@@ -40,7 +42,7 @@ Hideaki Hata\IEEEauthorrefmark{1}
 Nara Institute of Science and Technology\\
 Takayama-cho 8916-5, Ikoma-shi, Nara,
 630-0192 Japan\\
-Email: \{ichinose.tomohiro.ik1, uemura.kyohei.ub9, tanaka.daiki.sx4, hata\}@is.naist.jp}
+Email: \{ichinose.tomohiro.ik1@is, uemura.kyohei.ub9@is, tanaka.daiki.sx4@is, hata@is, iida@itc, matumoto@is\}.naist.jp}
 }
 %Email: \{saito.yusuke.sl9, fujiwara.shin.fe5, kenji-f, stevche.radevski.sl1, hata\}@is.naist.jp,\\
 %iida@itc.naist.jp, matumoto@is.naist.jp}
