--- a/rocat.tex
+++ b/rocat.tex
@@ -6,7 +6,7 @@
 \usepackage{url}
 %\usepackage{fancybox}
 %\usepackage{subfigure}
-\usepackage{mediabb}
+%\usepackage{mediabb}
 
 \graphicspath{{./figures/}}
 \newcommand{\figref}[1]{Figure \ref{#1}}
@@ -40,7 +40,7 @@ Kenichi Matsumoto\IEEEauthorrefmark{1}
 %}
 \IEEEauthorblockA{\IEEEauthorrefmark{1}Graduate School of Information Science,
 Nara Institute of Science and Technology\\
-Takayama-cho 8916-5, Ikoma-shi, Nara,
+Takayama 8916-5, Ikoma, Nara,
 630-0192 Japan\\
 Email: \{ichinose.tomohiro.ik1@is, uemura.kyohei.ub9@is, tanaka.daiki.sx4@is, hata@is, iida@itc, matumoto@is\}.naist.jp}
 }
@@ -100,18 +100,11 @@ To realize such system, we present a visualization tool, \textit{Rocat}, which s
 \label{figure:Rocat}
 \end{figure*}
 
-\begin{figure}[tb]
-\centering
-\includegraphics[width=8cm]{Rocat-on-kataribe2.pdf}
-\caption{Snapshot of Rocat on Kataribe}
-\label{figure:Rocat-on-kataribe}
-\end{figure}
 
-
-In addition, we want to introduce the new concept of code visualization, that is, code visualization for communities.
+In addition, we would like to introduce the new concept of code visualization, \textit{code visualization for communities}.
 Previous visualization tools mainly focused on supporting developers, a single developer \cite{Wettel:2011:SSC:1985793.1985868} or a team of developers \cite{6648194}.
 However, we think that visualization should be beneficial for communities too, as we've learned the effectiveness of social coding \cite{Dabbish:2012:SCG:2145204.2145396} and pull-based development \cite{Gousios:2014:ESP:2568225.2568260}.
-To address this challenge, we integrated Rocat on \textit{Kataribe},  our code hosting service.
+To address this challenge, we integrated Rocat visualization system on Kataribe,  our code hosting service.
 With this kind of system, communities can share a large amount of information about the underlying software in a way that is quick and easy to understand.
 
 \section{Rocat: Software Visualization}
@@ -135,6 +128,13 @@ By using Unity, Rocat can be run on a web browser or any platform and can adopt 
 
 Rocat is not the only visualization but intends to a novel software development environment.
 We describe our concept with the following related approach.
+
+\begin{figure*}[tb]
+\centering
+\includegraphics[width=\linewidth]{Rocat-on-kataribe2.pdf}
+\caption{Snapshot of Rocat on Kataribe}
+\label{figure:Rocat-on-kataribe}
+\end{figure*}
 
 
 \subsection{Concept}
@@ -177,12 +177,13 @@ When developer pushes her/his commits into their original repositories, Kataribe
 These features allow researchers to get latest fine-grained histories when they want to start their new research.
 
 \section{Rocat on Kataribe}
-We have integrated Rocat into Kataribe to provide software analytics for the community.
+We are integrating Rocat into Kataribe to provide software analytics for the community.
 \figref{figure:Rocat-on-kataribe} shows a screen capture of Rocat on Kataribe.
-Kataribe provides Rocat page, which can be seen by pressing the tab button seen in the upper menu, for each repository.
-The bottom half shows the current source code which corresponds with building selected by the user.
+%Kataribe provides Rocat page, which can be seen by pressing the tab button seen in the upper menu, for each repository.
+%The bottom half shows the current source code which corresponds with building selected by the user.
+With Web browsers, users can see Rocat visualizations. In addition, source code of a selected module is available on the same web page.
 
-Rocat on Kataribe runs by Unity Web Player\footnote{http://unity3d.com/webplayer}, one of the supported platform by Unity for executing the project on a web browser.
+Rocat on Kataribe runs by Unity Web Player\footnote{http://unity3d.com/webplayer}, one of the supported platform by Unity for executing the project on a Web browser.
 The metrics data for constructing the building are managed on Kataribe, so updating the city and each building can be easily performed.
 In addition, data and source code shown by Rocat are always updated to the newest version.
 
@@ -194,29 +195,31 @@ Metrics includes in Historage helps user for more in-depth analysis and extend t
 
 % For the further evolution of Rocat on Kataribe, supporting real-time discussion and expressing software evolution could be conceivable.
 
-\begin{figure}[tb]
+\begin{figure*}[tb]
 \centering
-\includegraphics[width=8cm]{satd.pdf}
+\includegraphics[width=\linewidth]{satd.pdf}
 \caption{Visualization for self-admitted technical debt}
 \label{figure:SATD}
-\end{figure}
+\end{figure*}
 
 \section{Discussions and Future Work}
 We strongly believe that visualization is a crucial part of successful software engineering.
 Although currently some topics are separately studied like software analytics, team collaboration, learning/comprehension, knowledge sharing, and so on, we think that visual environment can be the center of these issues.
-We are developing a system using Rocat that visualizes self-admitted technical debt (SATD).
-Technical debt is a metaphor that has been used to express non-optimal solutions of software development, and SATD is a kind of technical debt that is intentionally introduced into source code with keywords such as "TODO" or "FIXME".
-\figref{figure:SATD} shows a screen capture of the system.
-The green ball and orange bubbles are markers of SATD.
-The users can find files that contain SATD without reading source codes and share the information that which file should be done refactoring.
 
 This paper presents code city for multiple software development environments, named Rocat.
 From here on, we continue to develop Rocat for building a new visual software development environment.
 To start with, we also present Rocat on Kataribe for providing software analytics for communities.
 
+Now we are developing a system using Rocat that visualizes self-admitted technical debt (SATD).
+Technical debt is a metaphor that has been used to express non-optimal solutions of software development, and SATD is a kind of technical debt that is intentionally introduced into source code with keywords such as "TODO" or "FIXME".
+\figref{figure:SATD} shows a screen capture of the system.
+The green ball and orange bubbles are markers of SATD.
+The users can find files that contain SATD without reading source codes and share the information that which file should be done refactoring.
+
+
 \section*{Acknowledgment}
-This work has been supported by JSPS KAKENHI Grant Number 26540029, and Program for Advancing Strategic International Networks to Accelerate the Circulation of Talented Researchers: Interdisciplinary Global Networks for Accelerating Theory and Practice in Software Ecosystem.
-We would like to thank Takao Nakagawa for the suggestions about the demo movie.
+This work has been supported by JSPS KAKENHI Grant Number 16H05857 and JSPS Program for Advancing Strategic International Networks to Accelerate the Circulation of Talented Researchers: Interdisciplinary Global Networks for Accelerating Theory and Practice in Software Ecosystem (G2603).
+We would like to thank Takao Nakagawa and Stevche Radevski for suggestions and advices.
 
 
 
