--- a/ref.bib
+++ b/ref.bib
@@ -7,3 +7,14 @@
  year = {2014},
  pages = {9:1--9:29},
 }
+
+@INPROCEEDINGS{6976075,
+author={A. Potdar and E. Shihab},
+booktitle={Software Maintenance and Evolution (ICSME), 2014 IEEE International Conference on},
+title={An Exploratory Study on Self-Admitted Technical Debt},
+year={2014},
+pages={91-100},
+keywords={project management;public domain software;software maintenance;software management;software quality;Apache HTTP Server;ArgoUML;Chromium OS;Eclipse;open source software projects;self-admitted technical debt;software maintenance;software quality;source-code comments;Chromium;Complexity theory;Computer hacking;Correlation;Java;Software maintenance;Software comments;Technical debt},
+doi={10.1109/ICSME.2014.31},
+ISSN={1063-6773},
+month={Sept},}
