change kataribe URL

--- a/rocat.tex
+++ b/rocat.tex
@@ -162,7 +162,7 @@ From an empirical study of modern code review, Bacchelli and Bird reports the mo
 To support these outcomes, Rocat can be helpful, that is, Rocat can be team collaboration platform too.
 
 \section{Kataribe: Fine-grained Code Hosting}
-\textit{Kataribe}\footnote{http://kataribe-dev.naist.jp} is a hosting service of Historage repositories \cite{Fujiwara:2014:KHS:2597073.2597125}.
+\textit{Kataribe}\footnote{http://sdlab.naist.jp/kataribe/} is a hosting service of Historage repositories \cite{Fujiwara:2014:KHS:2597073.2597125}.
 Historage repositories are fine-grained source code repositories \cite{Hata:2011:HFV:2024445.2024463}, and are converted from file-level Git repositories with a tool, \textit{Kenja}\footnote{\url{http://github.com/niyaton/kenja}}.
 Kenja constructs a directory structure for the Historage based on the result of syntactic analysis of all source code files in each commit.
 Currently, Kataribe hosts Historage written in C\#, Go, Python and Ruby, since Kenja can only construct on those programming languages.
