Add Future work and fix acknowledgment

--- a/rocat.tex
+++ b/rocat.tex
@@ -7,7 +7,7 @@
 %\usepackage{fancybox}
 %\usepackage{subfigure}
 \usepackage{mediabb}
-\usepackage{color}
+%\usepackage{color}
 
 \graphicspath{{./figures/}}
 \newcommand{\figref}[1]{Figure \ref{#1}}
@@ -117,11 +117,11 @@ In this section, we describe the overview and implementation of Rocat and inform
 Rocat is a visualization tool that can be applied to multiple software development environments.
 \figref{figure:Rocat} presents the snapshot of Rocat view.
 Similar to the CodeCity \cite{Wettel:2011:SSC:1985793.1985868}, extracted metrics are mapped on the hight and the base size of buildings.
-\textcolor{blue}{The height means LOC and the base size means the number of comments of the source code in current system.}
+The height represents LOC and the base size represents the number of comments of the source code in current system.
 Users can explore the city among buildings.
 When one building is selected (red building in the figure), its source code can be available on demand.
 It is possible to edit this source code with this view.
-The color of the building describes the top contributor of the file corresponds to the building \textcolor{blue}{(the color of each contributor is selected randomly)}.
+The color of the building describes the top contributor of the file corresponds to the building (the color of each contributor is selected randomly.)
 These color can be used to find out who understand and has a responsible for certain source code file.
 
 Although CodeMetropolis is realized on top of an attractive popular role-playing game, Minecraft\footnote{\url{https://minecraft.net/}} \cite{6648194}, we have started implementation using a cross-platform game engine, Unity\footnote{\url{https://unity3d.com/}}.
@@ -204,6 +204,13 @@ Metrics includes in Historage helps user for more in-depth analysis and extend t
 \label{figure:SATD}
 \end{figure*}
 
+\begin{figure}[tb]
+\centering
+\includegraphics[width=\linewidth]{ogami.pdf}
+\caption{RocatDebugger visualization for call graph}
+\label{figure:Debugger}
+\end{figure}
+
 \section{Discussions and Future Work}
 We strongly believe that visualization is a crucial part of successful software engineering.
 Although currently some topics are separately studied like software analytics, team collaboration, learning/comprehension, knowledge sharing, and so on, we think that visual environment can be the center of these issues.
@@ -217,11 +224,18 @@ Technical debt is a metaphor that has been used to express non-optimal solutions
 \figref{figure:SATD} shows a screen capture of the system.
 The green ball and orange bubbles are markers of SATD.
 The users can find files that contain SATD without reading source codes and share the information that which file should be done refactoring.
-\textcolor{blue}{We would like to evaluate the system by interview of OSS developers, and analyzing repositories before and after introduction of the system into development.}
+We would like to evaluate our system with the interview of OSS developers, and analyze their repositories to see the changes after introducing the system into development.
+
+
+Furthermore, we are developing "RocatDebugger" that visualizes Java programs' call graph and stack traces in real time.
+\figref{figure:Debugger} shows a screen capture of RocatDebugger.
+RocatDebugger is implemented as an Eclipse plugin, and assists developers to understand programs' behavior in debug.
+We would like to evaluate it with questionnaire and task of program comprehension for developers.
+
 
 \section*{Acknowledgment}
 This work has been supported by JSPS KAKENHI Grant Number 16H05857 and JSPS Program for Advancing Strategic International Networks to Accelerate the Circulation of Talented Researchers: Interdisciplinary Global Networks for Accelerating Theory and Practice in Software Ecosystem (G2603).
-We would like to thank Takao Nakagawa and Stevche Radevski for suggestions and advices.
+We would like to thank Yusuke Saito and Shin Fujiwara for their initial work on Rocat, and Takao Nakagawa and Stevche Radevski for their suggestions and advices.
 
 
 
